# azalea-renderer

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
shaders/: Cargo.toml  shaders  shaders.json  shaders.spv  shaders.spv.json
shaders/.cargo/: config.toml
shaders/src/: lib.rs
src/: main.rs  render_plguin.rs  render_plugin.rs
src/renderer/: camera.rs  chunk.rs  mesher.rs  mod.rs  shaders.wgsl  state.rs  texture.rs  world.rs
src/renderer/assets/: block_state.rs  mod.rs  model.rs  texture.rs
