[package]
name = "azalea-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
log = "0.4"
wgpu = "0.20.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
image = "0.25.1"
thiserror = "1.0.59"
glam = {version = "0.27.0", features = ["serde"]}
anyhow = "1.0.82"
bevy_ecs = "0.13.2"
tokio = "^1.36.0"
azalea = {git = "https://github.com/urisinger/azalea-render-fork.git"}
flume = "0.11.0"
parking_lot = { version = "^0.12.1", features = ["deadlock_detection"] }
serde_json = "1.0"
serde = "1.0"
serde-tuple-vec-map = "1.0"
serde_tuple = "0.5.0"
walkdir = "2.5.0"
